# runir

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  GOAL.md  LOG.md  README.md  pyproject.toml  pyrightconfig.json
exe/: CMakeLists.txt  state_graph.cpp
python/: CMakeLists.txt  pyrunir_build_backend.py  pyrunir_feature_build_backend.py
python/src/: CMakeLists.txt  bindings.cpp  module.cpp
python/src/pyrunir/: __init__.py  __init__.pyi  __main__.py  module.cpp  module.hpp
python/src/pyrunir/datasets/: __init__.py  config.cpp  equivalence_graph.cpp  module.cpp  module.hpp  serialization.cpp  state_graph.cpp  task_class.cpp
python/src/pyrunir/graphs/: __init__.py  graph.hpp  graphs.cpp  graphs.hpp  module.cpp  module.hpp
python/src/pyrunir/kr/: __init__.py  module.cpp  module.hpp  task_context.cpp
python/src/pyrunir/kr/dl/: __init__.py  binding_helpers.hpp  cnf_grammar.cpp  datas.cpp  dl.cpp  dl.hpp  grammar.cpp  indices.cpp  module.cpp  module.hpp  repositories.cpp  views.cpp
python/src/pyrunir/kr/gp/: __init__.py  indices.cpp  module.cpp  module.hpp  policy_executor.cpp  repository.cpp  syntactic_complexity.cpp  views.cpp
python/src/pyrunir/kr/ps/: __init__.py  indices.cpp  module.cpp  module.hpp  repository.cpp  sketch_executor.cpp  syntactic_complexity.cpp  views.cpp
python/src/pyrunir/kr/uns/: __init__.py  indices.cpp  module.cpp  module.hpp  repository.cpp  views.cpp
python/tests/: conftest.py  fixture_utils.py  test_build_backend.py  test_import.py
python/tests/datasets/: test_state_graph.py
python/tests/downstream/: test_downstream_python_import.py
python/tests/downstream/minimal_downstream_package/: CMakeLists.txt
python/tests/downstream/minimal_downstream_package/src/: downstream_runir_user.cpp  downstream_template_user.cpp
python/tests/graphs/: test_graphs.py
python/tests/kr/dl/: test_grammar_factory.py
python/tests/kr/dl/grammar/: test_grammar_factory.py
python/tests/kr/gp/dl/: test_policy_executor.py
python/tests/kr/ps/: test_parser_fixtures.py  test_repository.py
python/tests/kr/ps/ext/: test_ext_structural_termination.py  test_module_parser.py
python/tests/kr/uns/: test_classifier.py
src/: CMakeLists.txt  runir.cpp  template_feature.cpp
src/cnf_grammar/: generate.cpp  translate.cpp
src/datasets/: CMakeLists.txt  equivalence_graph.cpp  object_graph.cpp  state_graph.cpp
src/grammar/: grammar_factory.cpp  parser.cpp
src/grammar/parser/: parser.cpp  parser_def.hpp  parser_instantiations.cpp
src/graphs/: CMakeLists.txt
src/graphs/algorithms/: nauty.cpp  nauty_impl.cpp  nauty_impl.hpp
src/kr/: CMakeLists.txt  task_context.cpp
src/kr/dl/: repository.cpp
src/kr/dl/cnf_grammar/: constructor_repository.cpp  generate.cpp  translate.cpp  translate_ext.cpp  translate_impl.hpp  translate_uns.cpp
src/kr/dl/grammar/: constructor_repository.cpp  grammar_factory.cpp  parser.cpp
src/kr/dl/grammar/base/: grammar_factory.cpp  parser.cpp
src/kr/dl/grammar/parser/: parser.cpp  parser_def.hpp  parser_instantiations.cpp
src/kr/gp/: policy_executor.cpp
src/kr/gp/dl/: parser.cpp  policy_factory.cpp
src/kr/gp/dl/parser/: parser.cpp  parser_def.hpp  parser_instantiations.cpp
src/kr/ps/: sketch_executor.cpp
src/kr/ps/base/: sketch_executor.cpp
src/kr/ps/base/dl/: incomplete_structural_termination.cpp  parser.cpp  sketch_factory.cpp  structural_termination.cpp
src/kr/ps/ext/: module_program_executor.cpp
src/kr/ps/ext/dl/: ceg_structural_termination.cpp  incomplete_structural_termination.cpp  module_factory.cpp  module_program_structural_termination.cpp  parser.cpp  structural_termination.cpp
src/kr/ps/structural_termination/: detail.hpp  incomplete.cpp  policy_graph.cpp  scc_refinement_forest.cpp  scc_refinement_forest.hpp  sieve.cpp
src/kr/ps/uns/: sketch_executor.cpp
src/kr/ps/uns/dl/: parser.cpp  sketch_factory.cpp
src/kr/uns/dl/: classifier_factory.cpp  parser.cpp
src/kr/uns/dl/parser/: parser.cpp  parser_def.hpp  parser_instantiations.cpp
tests/: CMakeLists.txt
tests/cpp/: test_core.cpp
tests/fixtures/datasets/: equivalence_graph.json  generate_equivalence_graph.py
tests/fixtures/graphs/: shapes.json
tests/fixtures/kr/dl/grammar/: factory.json  generate_grammar_factory.py  gripper.cnf  gripper.grammar  policy_parser.sketch
tests/fixtures/kr/ps/: generate_structural_termination.py  parser_negative.json  structural_termination.json
tests/fixtures/kr/ps/ext/: execution.json  formatter_fragments.json  generate_execution_outcomes.py
tests/fixtures/kr/ps/parser/: alternative_rules.module  base_duplicate_feature.sketch  base_duplicate_rule.sketch  entry_arguments.program  ext_duplicate_feature.module  ext_duplicate_rule.module
tests/fixtures/kr/uns/: always.classifier  classifier.json  interning.classifier  positive.classifier  unknown_feature.classifier
tests/unit/: fixtures.hpp  formatter.cpp
tests/unit/datasets/: equivalence_graph.cpp  equivalence_graph.json  fixtures.hpp  object_graph.cpp  state_graph.cpp  state_graph_serialization.cpp  state_graph_serialization.json
tests/unit/graphs/: static_graph.cpp
tests/unit/graphs/algorithms/: color_refinement.cpp
tests/unit/kr/dl/: argument.cpp  boolean.cpp  concept.cpp  constructor.cpp  numerical.cpp  register.cpp  role.cpp
tests/unit/kr/dl/cnf_grammar/: boolean.cpp  concept.cpp  constructor.cpp  derivation_rule.cpp  grammar.cpp  non_terminal.cpp  numerical.cpp  role.cpp  substitution_rule.cpp
tests/unit/kr/dl/grammar/: boolean.cpp  concept.cpp  constructor.cpp  constructor_or_non_terminal.cpp  derivation_rule.cpp  grammar.cpp  non_terminal.cpp  numerical.cpp  role.cpp
tests/unit/kr/dl/semantics/: denotation.cpp
tests/unit/kr/dl/uns/: constructors.cpp
tests/unit/kr/gp/dl/: policy_executor.cpp
tests/unit/kr/grammar/: grammar_factory.cpp
tests/unit/kr/ps/: structural_termination.cpp
tests/unit/kr/ps/base/: condition.cpp  effect.cpp  rule.cpp  sketch.cpp  sketch_executor.cpp
tests/unit/kr/ps/dl/: parser.cpp
tests/unit/kr/ps/ext/: condition.cpp  effect.cpp  (+10 more)
tests/unit/kr/uns/: classifier.cpp  feature.cpp
(+1265 files in other folders)
