[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pyyggdrasil>=0.0.17,<0.1",
    "pytyr>=0.0.24,<0.1",
]
build-backend = "pyrunir_build_backend"
backend-path = ["python"]

[project]
name = "pyrunir"
version = "0.0.6"
description = "Runir description logic feature library"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dominik Drexler", email = "dominik.drexler@liu.se"},
]
dependencies = [
    "pyyggdrasil>=0.0.17,<0.1",
    "pytyr>=0.0.24,<0.1",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/planning-and-learning/runir"

[tool.scikit-build]
build.targets = ["pyrunir_wheel"]
cmake.build-type = "Release"
install.components = ["pyrunir"]
wheel.packages = []

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "Config.cmake.in",
    "README.md",
    "pyproject.toml",
    "cmake/**",
    "include/**",
    "python/**",
    "src/**",
    "tests/**",
]
exclude = [
    "build*/**",
    "*.egg-info/**",
]

[tool.scikit-build.cmake.define]
RUNIR_BUILD_PYRUNIR = "ON"
RUNIR_BUILD_TESTS = "OFF"
CMAKE_INSTALL_LIBDIR = "lib"

[tool.cibuildwheel]
container-engine = "docker"
before-build = "python -m pip install --no-cache-dir 'pypddl>=1.0.11,<1.1' 'pyyggdrasil>=0.0.17,<0.1' 'pytyr>=0.0.24,<0.1'"

[tool.cibuildwheel.linux]
repair-wheel-command = "python -m pyyggdrasil.repair --providers pypddl,pyyggdrasil,pytyr --dest-dir {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "python -m pyyggdrasil.repair --providers pypddl,pyyggdrasil,pytyr --require-archs {delocate_archs} --dest-dir {dest_dir} {wheel}"
