[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pyyggdrasil>=0.0.21,<0.1",
    "pytyr>=0.0.27,<0.1",
    "pypddl>=1.0.19,<1.1",
]
build-backend = "pyrunir_build_backend"
backend-path = ["python"]

[project]
name = "pyrunir"
version = "0.0.18"
description = "Runir description logic feature library"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dominik Drexler", email = "dominik.drexler@liu.se"},
]
dependencies = [
    "pyyggdrasil>=0.0.21,<0.1",
    "pytyr>=0.0.27,<0.1",
    "pypddl>=1.0.19,<1.1",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/planning-and-learning/runir"

[tool.scikit-build]
build.targets = ["pyrunir_wheel"]
cmake.build-type = "Release"
install.components = ["pyrunir"]
wheel.packages = []

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "Config.cmake.in",
    "README.md",
    "pyproject.toml",
    "cmake/**",
    "include/**",
    "python/**",
    "src/**",
    "tests/**",
]
exclude = [
    "build*/**",
    "*.egg-info/**",
]

[tool.scikit-build.cmake.define]
RUNIR_BUILD_PYRUNIR = "ON"
RUNIR_BUILD_TESTS = "OFF"
CMAKE_INSTALL_LIBDIR = "lib"

[tool.cibuildwheel]
container-engine = "docker"
# Build in the cibuildwheel environment (not a fresh isolated env) so the
# provider install below — which retries to absorb TestPyPI index-propagation
# lag — is the single source of build dependencies. With build isolation the
# build would re-resolve build-system.requires from the index with no retry.
# Because --no-isolation also skips scikit-build-core's dynamic build tools,
# cmake/ninja must be installed here too (manylinux ships cmake but not ninja).
build-frontend = { name = "build", args = ["--no-isolation"] }
before-build = "n=0; until python -m pip install --no-cache-dir 'scikit-build-core>=0.10' 'cmake>=3.15' 'ninja>=1.5' 'pypddl>=1.0.19,<1.1' 'pyyggdrasil>=0.0.21,<0.1' 'pytyr>=0.0.27,<0.1'; do n=$((n+1)); [ $n -ge 30 ] && exit 1; echo 'provider wheels not on the index yet; retrying in 60s'; sleep 60; done"

[tool.cibuildwheel.linux]
repair-wheel-command = "python -m pyyggdrasil.repair --providers pypddl,pyyggdrasil,pytyr --dest-dir {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
repair-wheel-command = "python -m pyyggdrasil.repair --providers pypddl,pyyggdrasil,pytyr --require-archs {delocate_archs} --dest-dir {dest_dir} {wheel}"
